--- a/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
+++ b/www.nass.gov.ng/afc82284e730869e7ddee6211ac162cebaaac970.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 20:59:35 GMT
+    - Fri, 23 Jun 2017 23:58:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w8lnR852R8T%2CuKz8D5gol3; path=/
+    - PHPSESSID=qVsFYKhb-AqkLKsEK%2CeL-1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 20:59:35 GMT
+recorded_at: Fri, 23 Jun 2017 23:58:34 GMT
