--- a/www.nass.gov.ng/d07df87a351ee39350a65045766959f66959c127.yml
+++ b/www.nass.gov.ng/d07df87a351ee39350a65045766959f66959c127.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:01:26 GMT
+    - Sat, 24 Jun 2017 00:00:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9yqTc0nL9CMBejxqkq-%2CL1; path=/
+    - PHPSESSID=2wfORGe0PVNnUtm4Dmpve2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:01:26 GMT
+recorded_at: Sat, 24 Jun 2017 00:00:31 GMT
