--- a/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
+++ b/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:08:20 GMT
+    - Sat, 24 Jun 2017 00:05:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wAZPUd3x34axreUUlePlH2; path=/
+    - PHPSESSID=3z3%2Cn68kipqaQU6vRTjJn0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:08:20 GMT
+recorded_at: Sat, 24 Jun 2017 00:05:59 GMT
