--- a/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
+++ b/www.nass.gov.ng/0eb5687ed5cedd862ec1370cbb46981da8dcef40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:14:05 GMT
+    - Sat, 24 Jun 2017 00:12:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oK1YB10j-RN%2CuV17hELfP0; path=/
+    - PHPSESSID=ZqroRxuNrtt8IkJLZ6cui3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:14:05 GMT
+recorded_at: Sat, 24 Jun 2017 00:12:28 GMT
