--- a/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
+++ b/www.nass.gov.ng/849376bfd6146a66aed2635e03b87ae6696b98f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:14:23 GMT
+    - Sat, 24 Jun 2017 00:13:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yKSeaNtsivdQ4bfK2txcL0; path=/
+    - PHPSESSID=9J6YZI-cA6I-J6X3L2%2CP90; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:14:23 GMT
+recorded_at: Sat, 24 Jun 2017 00:13:21 GMT
