--- a/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
+++ b/www.nass.gov.ng/3ecb3a99fb79f7500a8fbce71bfbd3b55a525c96.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:24:40 GMT
+    - Sat, 24 Jun 2017 00:23:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CXJRZ-hNEEwg%2Cv3rdcA6m0; path=/
+    - PHPSESSID=Q6-7gTqNRJJZ%2CfsS0wPFM1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:24:40 GMT
+recorded_at: Sat, 24 Jun 2017 00:23:28 GMT
