--- a/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
+++ b/www.nass.gov.ng/a5171c5522c4232a71dead4a30027e824371267c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:26:43 GMT
+    - Sat, 24 Jun 2017 00:26:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=F6dnLFU3xyf61hdkP%2CeQK2; path=/
+    - PHPSESSID=UZYCHhyE3OFy3YwulNeVH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:26:43 GMT
+recorded_at: Sat, 24 Jun 2017 00:26:41 GMT
