--- a/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
+++ b/www.nass.gov.ng/fb147f01bf26aa8506e7afdf771f4521616d257f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:28:22 GMT
+    - Sat, 24 Jun 2017 00:28:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7ODZT3Pcs-C5gbW8p9I3Z3; path=/
+    - PHPSESSID=A4%2CX6oQaWfWGEa6KCH6ja1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:28:22 GMT
+recorded_at: Sat, 24 Jun 2017 00:28:44 GMT
