--- a/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
+++ b/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:42:26 GMT
+    - Sat, 24 Jun 2017 00:44:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CEqSq0qq0s-p9QQrFYAYj0; path=/
+    - PHPSESSID=BbvbSZws4zIB0a4r3c52X0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:42:26 GMT
+recorded_at: Sat, 24 Jun 2017 00:44:57 GMT
