--- a/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
+++ b/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:42:55 GMT
+    - Sat, 24 Jun 2017 00:45:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bccFuO%2C27iEPooHFnWJQY2; path=/
+    - PHPSESSID=qsl9U1XSFxXBwwDj94T-b2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:42:55 GMT
+recorded_at: Sat, 24 Jun 2017 00:45:35 GMT
