--- a/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
+++ b/www.nass.gov.ng/76fa4fedda2c4d9d58ecbe956c92e6b01f09e5d2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:47:02 GMT
+    - Sat, 24 Jun 2017 00:48:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sizD-JqG50yWAX9PVID2f3; path=/
+    - PHPSESSID=lf4LqmaSXWFNx9mKfK%2CRA3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:47:02 GMT
+recorded_at: Sat, 24 Jun 2017 00:48:55 GMT
