--- a/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
+++ b/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:51:44 GMT
+    - Sat, 24 Jun 2017 00:52:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tWcwhseew34nWtR2z7gh12; path=/
+    - PHPSESSID=nkrKnJxYFJW%2CtKZJzHD4C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:51:44 GMT
+recorded_at: Sat, 24 Jun 2017 00:52:51 GMT
