--- a/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
+++ b/www.nass.gov.ng/759dfaafa03b20bb35c0feda45c2088075e75818.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:52:44 GMT
+    - Sat, 24 Jun 2017 00:54:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ime5XFHWap0WXAq%2Cj5b9e2; path=/
+    - PHPSESSID=nausnICtvr9YNT9pWU5s82; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:52:45 GMT
+recorded_at: Sat, 24 Jun 2017 00:54:28 GMT
