--- a/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
+++ b/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 21:59:24 GMT
+    - Sat, 24 Jun 2017 01:01:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-LXfyZNr60qVXH9FO6%2ChH0; path=/
+    - PHPSESSID=37QjyzQOuc95RAABuQ7jD0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 21:59:24 GMT
+recorded_at: Sat, 24 Jun 2017 01:01:17 GMT
