--- a/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
+++ b/www.nass.gov.ng/af079e37caeb1a8fad2c1325ca38fd2f80ca4e62.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:00:36 GMT
+    - Sat, 24 Jun 2017 01:01:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CTteYH0kHGhuhSlZD2ha43; path=/
+    - PHPSESSID=sLrAJgfvgkeM8r0v9fFMN0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:00:36 GMT
+recorded_at: Sat, 24 Jun 2017 01:01:58 GMT
