--- a/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
+++ b/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:03:20 GMT
+    - Sat, 24 Jun 2017 01:04:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=z0IpVVIy0WrkHs8ugk5Xa1; path=/
+    - PHPSESSID=4r1bDKHFgsw8-%2CN8ltT7i1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:03:21 GMT
+recorded_at: Sat, 24 Jun 2017 01:04:42 GMT
