--- a/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
+++ b/www.nass.gov.ng/ab4a2e078f74117aac5ca20280e5030e1a01226a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:03:51 GMT
+    - Sat, 24 Jun 2017 01:05:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QKycrNBKm3m-JogDh204r0; path=/
+    - PHPSESSID=SM9s7dg5zsH6WZnllg%2CoY3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:03:51 GMT
+recorded_at: Sat, 24 Jun 2017 01:05:37 GMT
