--- a/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
+++ b/www.nass.gov.ng/aa84141d30f5a6828bc5a5c4a11f70841ac0f2a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:05:03 GMT
+    - Sat, 24 Jun 2017 01:07:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CZBHHtIb20BH%2CDg8Jsxdr2; path=/
+    - PHPSESSID=xjoShSLrpZ-CbMofrS1fq3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:05:03 GMT
+recorded_at: Sat, 24 Jun 2017 01:07:34 GMT
