--- a/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
+++ b/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:07:03 GMT
+    - Sat, 24 Jun 2017 01:09:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KVS0bZvsvfmoXhlHvBZ4G2; path=/
+    - PHPSESSID=B%2CdJDEoxZRXID%2C202-sMX2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:07:03 GMT
+recorded_at: Sat, 24 Jun 2017 01:09:33 GMT
