--- a/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
+++ b/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:08:29 GMT
+    - Sat, 24 Jun 2017 01:10:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5Ah4UPWSMWV0VQBRhlW0w1; path=/
+    - PHPSESSID=QN0NBfV1NcCAT6GSx%2CqGw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:08:30 GMT
+recorded_at: Sat, 24 Jun 2017 01:10:36 GMT
