--- a/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
+++ b/www.nass.gov.ng/f49149dcb79069b66f19c5abde83e1785d7ac6cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:10:52 GMT
+    - Sat, 24 Jun 2017 01:13:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xEWZFs30zQGcgDZGdAfwv1; path=/
+    - PHPSESSID=HWV6W%2CsmJBNRN-HbQqQ3n1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:10:52 GMT
+recorded_at: Sat, 24 Jun 2017 01:13:32 GMT
