--- a/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
+++ b/www.nass.gov.ng/d3b943a4d3b94053e58f0ec9f2bcacdbe7e2eb32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:14:44 GMT
+    - Sat, 24 Jun 2017 01:17:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xgv2bNiutNxs4lcCgdBHS2; path=/
+    - PHPSESSID=IDlK8iZuj%2CO%2CLn-pxRYys1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:14:44 GMT
+recorded_at: Sat, 24 Jun 2017 01:17:09 GMT
