--- a/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
+++ b/www.nass.gov.ng/87ed6fef455ee412354ef09e133986d3897e7aaf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:15:13 GMT
+    - Sat, 24 Jun 2017 01:17:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GPXtFPahu2RlNMGHUJK0Z1; path=/
+    - PHPSESSID=0qZc%2CqF51CoTbwb4jvM8t1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:15:13 GMT
+recorded_at: Sat, 24 Jun 2017 01:17:30 GMT
