--- a/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
+++ b/www.nass.gov.ng/43f806c1cda4d53d8a52ec8c0209af0409627a65.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:18:18 GMT
+    - Sat, 24 Jun 2017 01:20:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1Y-QSWcQTncv90AqHQcVM3; path=/
+    - PHPSESSID=0G4r6oR%2CN0ONof71FhBRI3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:18:18 GMT
+recorded_at: Sat, 24 Jun 2017 01:20:26 GMT
