--- a/www.nass.gov.ng/891a390838a67251fec199b9385de98c9fb95ade.yml
+++ b/www.nass.gov.ng/891a390838a67251fec199b9385de98c9fb95ade.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:22:15 GMT
+    - Sat, 24 Jun 2017 01:24:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=AzRbmumyg5vnf5QTWp%2Cho2; path=/
+    - PHPSESSID=F%2CHAEt65Nk5Ul8XVrJAst0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:22:15 GMT
+recorded_at: Sat, 24 Jun 2017 01:24:05 GMT
