--- a/www.nass.gov.ng/bf819e1769570b6dcb0d09baedacd4f3b5b752a5.yml
+++ b/www.nass.gov.ng/bf819e1769570b6dcb0d09baedacd4f3b5b752a5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:24:30 GMT
+    - Sat, 24 Jun 2017 01:26:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mXzu9w7plo%2C65aqJBtFvI2; path=/
+    - PHPSESSID=fVF1q3ESktoU4bEkLZP5N0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:24:30 GMT
+recorded_at: Sat, 24 Jun 2017 01:26:23 GMT
