--- a/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
+++ b/www.nass.gov.ng/9a333c17d31253c1b997daf0bf4c20afb83ee9ca.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:29:16 GMT
+    - Sat, 24 Jun 2017 01:30:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IXI2hhSOZR%2CU6i7n8SxLt3; path=/
+    - PHPSESSID=tTHEAyqUdDf42E9IwVYgd3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:29:16 GMT
+recorded_at: Sat, 24 Jun 2017 01:30:59 GMT
