--- a/www.nass.gov.ng/ccfe1e17808f5610812aea56cd290eacd5dcb079.yml
+++ b/www.nass.gov.ng/ccfe1e17808f5610812aea56cd290eacd5dcb079.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:32:04 GMT
+    - Sat, 24 Jun 2017 01:33:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kj3weKAZP7ENsfH0%2CQBm83; path=/
+    - PHPSESSID=KhN4mU3fYpTyrlfzp8lY43; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:32:04 GMT
+recorded_at: Sat, 24 Jun 2017 01:33:03 GMT
