--- a/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
+++ b/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:33:12 GMT
+    - Sat, 24 Jun 2017 01:33:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CreItW4TVmvWxL9nmrW0X1; path=/
+    - PHPSESSID=5WXgnw3nKggg2E8JDeZp63; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:33:12 GMT
+recorded_at: Sat, 24 Jun 2017 01:33:40 GMT
