--- a/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
+++ b/www.nass.gov.ng/49a6cd159ab5a85819e2996833bc115735063aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:35:26 GMT
+    - Sat, 24 Jun 2017 01:34:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jRc%2CnLFkphN%2CN%2C6CCoVMC3; path=/
+    - PHPSESSID=khAabWk5meFNihGxLS%2C6n1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:35:27 GMT
+recorded_at: Sat, 24 Jun 2017 01:34:52 GMT
