--- a/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
+++ b/www.nass.gov.ng/567dce140cd1a5daf391558edbe6343ebc03d55b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:36:48 GMT
+    - Sat, 24 Jun 2017 01:35:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tHqddGX%2CPHG4PorCVg4BF2; path=/
+    - PHPSESSID=g0DztAL7rjTGekZHbQ6NG3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:36:48 GMT
+recorded_at: Sat, 24 Jun 2017 01:35:48 GMT
