--- a/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
+++ b/www.nass.gov.ng/04d8f6dd15370759a45b75b08eaf224bb1008f86.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:37:08 GMT
+    - Sat, 24 Jun 2017 01:36:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e%2CVqTuwoR5wIo7McR8z333; path=/
+    - PHPSESSID=oqbXNzjE1n%2CdQTe6qH8n23; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:37:08 GMT
+recorded_at: Sat, 24 Jun 2017 01:36:06 GMT
