--- a/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
+++ b/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:42:47 GMT
+    - Sat, 24 Jun 2017 01:42:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IteCHO1%2CRLxhylFL9Dfut0; path=/
+    - PHPSESSID=cw56kCvCfGtA146jWfI8l1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:42:47 GMT
+recorded_at: Sat, 24 Jun 2017 01:42:25 GMT
