--- a/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
+++ b/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:45:42 GMT
+    - Sat, 24 Jun 2017 01:45:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hAoAiBehnak%2CH8FhuVolF1; path=/
+    - PHPSESSID=D7rccD9Y9P%2CVpceZcU0dH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:45:42 GMT
+recorded_at: Sat, 24 Jun 2017 01:45:50 GMT
