--- a/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
+++ b/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:46:40 GMT
+    - Sat, 24 Jun 2017 01:46:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=D1zgulfq8syIqogSUE%2Cek1; path=/
+    - PHPSESSID=7wI20Xy4eFCp2yeq6lWW72; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:46:40 GMT
+recorded_at: Sat, 24 Jun 2017 01:46:46 GMT
