--- a/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
+++ b/www.nass.gov.ng/d0e59834d6b9ae93023fe8fc802e296d49ae653d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:47:22 GMT
+    - Sat, 24 Jun 2017 01:47:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5lmocyUPaj%2CIT0zEn1Rbk1; path=/
+    - PHPSESSID=3I6lFwZ41rrah4vG80mP51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:47:22 GMT
+recorded_at: Sat, 24 Jun 2017 01:47:04 GMT
