--- a/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
+++ b/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:48:40 GMT
+    - Sat, 24 Jun 2017 01:49:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZG2CMhQ%2C5v6-cdXXEzXYj3; path=/
+    - PHPSESSID=Y4C5ihpeA-siY5RyArdYg0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:48:40 GMT
+recorded_at: Sat, 24 Jun 2017 01:49:56 GMT
