--- a/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
+++ b/www.nass.gov.ng/768d7d8bd1fb1cb3dfbfe5d66654eb4db1f95958.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 22 Jun 2017 22:49:46 GMT
+    - Sat, 24 Jun 2017 01:51:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3g9%2C5md2gDcbQ-NnfRC2i1; path=/
+    - PHPSESSID=0RdqkqCVw3B72Z7qjPVCt2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 22 Jun 2017 22:49:46 GMT
+recorded_at: Sat, 24 Jun 2017 01:51:10 GMT
